# main

./: .pre-commit-config.yaml  README.md
backwards-facing-step/: README.md
core/: CMakeLists.txt  README.md  pyproject.toml
core/examples/core/cuda_sum/: CMakeLists.txt
core/examples/core/linear_solve/: CMakeLists.txt  linear_solve.cpp
core/src/core/: CMakeLists.txt
geometry/: .gitignore  CMakeLists.txt  README.md
learn/: README.md  pyproject.toml
monitor/: README.md
monitor/frontend/app/: layout.tsx  page.tsx
panel_methods/: .gitignore  README.md  pyproject.toml
panel_methods/docs/articles/source_panel_method/sections/: governing_equations.tex  introduction.tex
panel_methods/docs/articles/source_vortex_panel_method/: main.tex
panel_methods/docs/articles/source_vortex_panel_method/sections/: governing_equations.tex  introduction.tex
panel_methods/docs/articles/vortex_panel_method/sections/: governing_equations.tex  introduction.tex
panel_methods/scripts/: elementary_flows.ipynb  source_panel.ipynb  source_vortex_panel.ipynb  vortex_panel.ipynb
panel_methods/src/panel_methods/: naca.py  panel.py
panel_methods/src/panel_methods/elementary_flows/: __init__.py  doublet.py  source.py  uniform_flow.py  vortex.py
panel_methods/src/panel_methods/naca/: __init__.py  naca4.py
panel_methods/src/panel_methods/panel/: __init__.py  common.py  panel.py  source_panel.py  source_vortex_panel.py  vortex_panel.py
render/: CMakeLists.txt  README.md
render/examples/opengl_triangle/: CMakeLists.txt
render/src/: CMakeLists.txt
(+81 files in other folders)
