[project]
name = "panel_methods"
version = "0.1.0"
description = "Panel methods"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "ipympl>=0.10.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pre-commit>=4.6.0",
    "scipy>=1.17.1",
    "scipy-stubs~=1.17.1",
]
